--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
 <body>
 <a href="repository.mattctv-1.0.0.zip">repository.mattctv-1.0.0.zip</a>
+<a href="script.mattctv.allinone.zip">repository.mattctv-1.0.0.zip</a>
 </body>
 </html>
