--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="repository.mattctv-1.0.0.zip">repository.mattctv-1.0.0.zip</a>
-<a href="script.mattctv.allinone.zip">repository.mattctv-1.0.0.zip</a>
+<a href="script.mattctv.allinone.zip">script.mattctv.allinone.zip</a>
 </body>
 </html>
